<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PShare</string>
    <string name="title_activity_gorsel">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="yorum_yap">Yorum Yap</string>
    <string name="a_klama">Açıklama</string>
    <string name="payla">PAYLAŞ</string>
    <string name="kullan_c_email">Kullanıcı Email</string>
    <string name="kullan_c_ifre">Kullanıcı Şifre</string>
    <string name="giri_yap">GİRİŞ YAP</string>
    <string name="kay_t_ol">KAYIT OL</string>
    <string name="_0_yorum">0 Yorum</string>
    <string name="i_in_cevap">Yorumu için yanıtlar</string>
    <string name="cevap_yaz">Yanıt Yaz</string>
    <string name="_0_yan_t">0 Yanıt</string>
    <string name="foto_raf_payla">Paylaşım Yap</string>
    <string name="k_yap">Çıkış Yap</string>
    <string name="tema_de_i_tir">Tema Değiştir</string>
    <string name="web_sitesi">Web Sitesi</string>
    <string name="gif_payla">GIF Paylaş</string>
    <string name="payla_m_yap">Paylaşım Yap</string>
    <string name="post_payla">Post Paylaş</string>
    <string name="attach">attach</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="icapp">icApp</string>
    <string name="kullan_c_ad_de_i_tir">Kullanıcı Adı Değiştir</string>
    <string name="de_t_r">DEĞİŞTİR</string>
    <string name="ekle">Ekle</string>
    <string name="devam_et">Devam Et</string>
    <string name="kullan_c_ad_ekle">Kullanıcı Adı Ekle</string>
    <string name="image">Image</string>
    <string name="commentbutton">CommentButton</string>
    <string name="deletebutton">DeleteButton</string>
    <string name="action_search">Ara</string>
    <string name="ke_fet">Keşfet</string>
    <string name="ana_men">Ana Menü</string>
    <string name="tak_p_et">TAKİP ET</string>
    <string name="tak_b_birak">TAKİBİ BIRAK</string>
    <string name="profileimage">ProfileImage</string>
    <string name="yeni_kullan_c_ad">Yeni Kullanıcı Adı</string>
    <string name="profil">Profil</string>
    <string name="kaydet">Kaydet</string>
    <string name="hen_z_hesab_n_z_yok_mu_kay_t_olun"><u>Henüz hesabınız yok mu? Kayıt olun.</u></string>
    <string name="hesab_n_z_var_m_giri_yap_n"><u>Hesabınız var mı? Giriş yapın.</u></string>
    <string name="kullan_c_ad_le_ara">Kullanıcı Adı İle Ara…</string>
    <string name="ndir">İndir</string>
    <string name="postu_i_in_yorumlar">Postu için yorumlar</string>
    <string name="kay_t_olarak_gizlilik_politikam_z_kabul_etmi_olursunuz">Kayıt olarak <u>gizlilik politikamızı</u> kabul etmiş olursunuz.</string>
    <string name="web_client_id" tools:ignore="TypographyDashes">942903515070-96c24bsqjk70rld6he6632q3sgngq6v8.apps.googleusercontent.com</string>
</resources>