<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserNameActivity">

    <TextView
        android:id="@+id/addUserNameTextView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/kullan_c_ad_ekle"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userNameAddText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/kullan_c_ad"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/gri" />

    <Button
        android:id="@+id/addUserNameBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameAddText"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/devam_et"
        android:textColor="@color/gri" />

</RelativeLayout>