<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameRegisterLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/kullan_c_ad"
        android:textColorHint="@color/gri"
        tools:targetApi="p">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameRegisterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameRegisterLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/kullan_c_email"
        android:textColorHint="@color/gri"
        tools:targetApi="p">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegisterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegisterLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailRegisterLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/kullan_c_ifre"
        android:textColorHint="@color/gri"
        app:passwordToggleEnabled="true"
        tools:targetApi="p">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordRegisterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerKayitOl"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegisterLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/kay_t_ol"
        android:textColor="@color/gri" />

</RelativeLayout>