<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileImage"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/profileimage"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <TextView
                android:id="@+id/userNameView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/userProfileImage"
                android:text=""
                android:textSize="17sp" />

            <TextView
                android:id="@+id/followButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/userNameView"
                android:text="@string/tak_p_et"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/unFollowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/userNameView"
                android:text="@string/tak_b_birak"
                android:textColor="@color/gri"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>