<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:civ_border_overlay="false" />

            <TextView
                android:id="@+id/recyclerRowKullaniciEmail"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@id/profileImage"
                android:gravity="center_horizontal"
                android:text=""
                android:textAlignment="center"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/recyclerRowKullaniciYorum"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerRowKullaniciEmail"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@id/profileImage"
                android:text=""
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/followButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:layout_toEndOf="@id/recyclerRowKullaniciEmail"
                android:contentDescription="@string/tak_p_et"
                android:src="@drawable/ic_baseline_add_circle_outline_24"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/unFollowButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:layout_toEndOf="@id/recyclerRowKullaniciEmail"
                android:contentDescription="@string/tak_b_birak"
                android:src="@drawable/ic_baseline_cancel_24"
                android:visibility="gone" />


        </RelativeLayout>


        <ImageView
            android:id="@+id/recyclerRowImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:maxHeight="400dp"
            android:scaleType="fitCenter" />


        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/commentsButton"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/commentbutton"
                    android:src="@drawable/ic_yorum_white" />

                <TextView
                    android:id="@+id/commentCountText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/_0_yorum"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />


            </LinearLayout>


            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:contentDescription="@string/deletebutton"
                android:src="@drawable/ic_baseline_cancel_24"
                android:visibility="gone" />


        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>