<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageComment"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/profil_resmi"
                android:scaleType="centerCrop"
                app:civ_border_overlay="false" />

            <TextView
                android:id="@+id/commentUserName"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text=""
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/comment"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textSize="18sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap,UseCompoundDrawables">

                <ImageView
                    android:id="@+id/replyYorumButton"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/yorum_yap"
                    android:src="@drawable/baseline_comment_24" />

                <TextView
                    android:id="@+id/replyCount"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/_0_yan_t"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />


            </LinearLayout>

            <ImageView
                android:id="@+id/deleteYorumButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:contentDescription="@string/_0_yorum"
                android:src="@drawable/baseline_cancel_24"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>